# backend/src/schemas/user.py
@@ -62,7 +62,3 @@ class ChangePasswordIn(BaseModel):
 
 class UserRoleIn(BaseModel):
     role_ids: list[int] = Field(default_factory=list)
-
-
-class UserTransferIn(BaseModel):
-    tenant_id: int
